<resources>
    <string name="app_name">sdk</string>
    <string name="sdk_event_dispatch">事件分发机制</string>
    <string name="sdk_media_player">MediaPlayer</string>
    <string name="sdk_view">View</string>
    <string name="sdk_edit_text">EditText</string>
    <string name="sdk_code_implementation">代码实现：</string>
    <string name="sdk_xml_implementation">XML实现：</string>
    <string name="sdk_key_listener_implementation">KeyListener实现：</string>
    <string name="sdk_password">密码</string>
    <string name="sdk_number">数字</string>
    <string name="sdk_decimal">小数</string>
    <string name="sdk_signed">负数</string>
    <string name="sdk_letter">字母</string>
    <string name="sdk_web_view">WebView</string>
    <string name="sdk_bluetooth">Bluetooth</string>

    <string name="sdk_storage">存储</string>
    <string name="sdk_write_external_storage">写入外部存储</string>
    <string name="sdk_read_external_storage">读取外部存储</string>

    <string name="sdk_task">任务</string>
    <string name="sdk_task_enter_activity">TaskEnterActivity</string>
    <string name="sdk_task_single_instance_activity">TaskSingleInstanceActivity</string>
    <string name="sdk_task_single_task_activity">TaskSingleTaskActivity</string>
    <string name="sdk_document_activity">DocumentActivity</string>
    <string name="sdk_start_task_single_instance_activity">启动TaskSingleInstanceActivity</string>
    <string name="sdk_start_task_single_task_activity">启动TaskSingleTaskActivity</string>
    <string name="sdk_start_document_activity">启动DocumentActivity</string>

    <string name="sdk_animation">动画</string>
</resources>