<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_event_dispatch"
            style="@style/Theme.XyAndroid.ButtonItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sdk_event_dispatch" />

        <Button
            android:id="@+id/btn_media_player"
            style="@style/Theme.XyAndroid.ButtonItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sdk_media_player" />

        <Button
            android:id="@+id/btn_view"
            style="@style/Theme.XyAndroid.ButtonItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sdk_view" />

        <Button
            android:id="@+id/btn_bluetooth"
            style="@style/Theme.XyAndroid.ButtonItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sdk_bluetooth" />

        <Button
            android:id="@+id/btn_storage"
            style="@style/Theme.XyAndroid.ButtonItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sdk_storage" />

        <Button
            android:id="@+id/btn_task"
            style="@style/Theme.XyAndroid.ButtonItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sdk_task" />
    </LinearLayout>
</ScrollView>